--- a/src/features/proximity/components/appleWatch.module.css
+++ b/src/features/proximity/components/appleWatch.module.css
@@ -1,12 +1,15 @@
 .canvas {
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   cursor: grab;
   touch-action: none;
-  background: black;
-}
-
-.canvas:active {
-  cursor: grabbing;
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
